[package]
name = "migrate-payload-archive"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = [
	"backtrace",
	"std",
], default-features = false }
chrono = { version = "0.4.31", default-features = false, features = ["std"] }
csv = { version = "1.3.0", default-features = false }
flate2 = { version = "1.0.28", default-features = false, features = [
	"rust_backend",
] }
futures = { version = "0.3.28", default-features = false, features = [
	"std",
	"alloc",
	"async-await",
	"executor",
] }
lazy_static = { version = "1.4.0", default-features = false }
object_store = { version = "0.7.1", default-features = false, features = [
	"aws",
	"gcp",
] }
serde = { version = "1.0.189", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.107", default-features = false, features = [
	"alloc",
	"std",
] }
tokio = { version = "1.33.0", default-features = false, features = [
	"macros",
	"rt-multi-thread",
	"rt",
] }
tokio-util = { version = "0.7.9", default-features = false, features = [
	"io",
	"io-util",
] }
tracing = { version = "0.1.37", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
	"alloc",
	"ansi",
	"env-filter",
	"json",
] }
